[package]
authors = ["Michael Edelman <michael@svelteup.io>"]
edition = "2018"
license = "Apache-2.0"
name = "update-project"
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.4.1"
log = "0.4.14"
serde_json = "1.0.64"
simple_logger = "1.13.0"
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
pretty_assertions = "1.0.0"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[lib]
name = "lib"
path = "src/lib.rs"
